--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <title>Christopher Danella</title>
 </head>
 <body>
+  <!-- Nav bar -->
+  <nav>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+    <a href="pdf/Christopher_DanellaDBC.pdf">Resume</a>
+  </nav>
+
+
   <h1>Christopher Danella</h1>
   <h2>Web Developer</h2>
 
