Add background image and responsive design

--- a/index.html
+++ b/index.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>Christopher Danella</title>
 </head>
 <body>
+
   <!-- Nav bar -->
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-    <a href="pdf/Christopher_DanellaDBC.pdf">Resume</a>
-  </nav>
+  <div class="container">
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+      <a href="pdf/Christopher_DanellaDBC.pdf">Resume</a>
+    </nav>
+  </div>
 
-
-  <h1>Christopher Danella</h1>
-  <h2>Web Developer</h2>
+  <div class="container">
+    <h1>Christopher Danella</h1>
+    <h2>Web Developer</h2>
+  </div>
 
   <!-- About section -->
-  <h3>About Me</h3>
-  <p>Greetings, my name is Christopher Danella. I'm a web developer currently residing in Brooklyn.</p>
-  <p>I'm passionate about creating elegant and purposeful applications. I like working with Ruby on Rails and Javascript. Clear communication and resolute dedication to a team are attributes that I'm proud to possess.</p>
-  <p>In addition to coding, I love to snowboard, attend concerts, watch my beloved Philadelphia sports teams, and hunt for the best cup of coffee in New York City.</p>
+  <div class="container">
+    <h3>About Me</h3>
+    <p>Greetings, my name is Christopher Danella. I'm a web developer currently residing in Brooklyn.</p>
+    <p>I'm passionate about creating elegant and purposeful applications. I like working with Ruby on Rails and Javascript. Clear communication and resolute dedication to a team are attributes that I'm proud to possess.</p>
+    <p>In addition to coding, I love to snowboard, attend concerts, watch my beloved Philadelphia sports teams, and hunt for the best cup of coffee in New York City.</p>
+  </div>
 
   <!-- Projects section -->
-  <h3>Projects</h3>
-  <p>PodPals</p>
-  <p>A Rails web app that allows users to join a podcast sharing community. Users can search for podcasts, add them to queues, and share them with friends.</p>
+  <div class="container">
+    <h3>Projects</h3>
+    <p>PodPals</p>
+    <p>A Rails web app that allows users to join a podcast sharing community. Users can search for podcasts, add them to queues, and share them with friends.</p>
+  </div>
 
   <!-- Contact section -->
-  <h3>Contact</h3>
-  <p>Please feel free to reach out to me if you're interested in learning more about my work.</p>
+  <div class="container">
+    <h3>Contact</h3>
+    <p>Please feel free to reach out to me if you're interested in learning more about my work.</p>
+  </div>
 
-  <footer>
-    <p>Copyright &copy; Christopher Danella 2016</p>
-  </footer>
+  <div class="container">
+    <footer>
+      <p>Copyright &copy; Christopher Danella 2016</p>
+    </footer>
+  </div>
 </body>
 </html>
