add link to podpals project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Projects section -->
   <div class="container">
     <h3>Projects</h3>
-    <p>PodPals</p>
+    <a href="https://podpals.herokuapp.com" id="project_link"><p>PodPals</p></a>
     <p>A Rails web app that allows users to join a podcast sharing community. Users can search for podcasts, add them to queues, and share them with friends.</p>
   </div>
 
