--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <!-- Nav bar -->
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
